disable gpg verification (temporarily), otherwise we get this error:
gpg: Signature made Thu May 14 15:34:16 2020 GMTDT
gpg:                using RSA key 4CE1877E19438C70
gpg: BAD signature from "TeX Live Distribution <tex-live@tug.org>" [ultimate]
Please try from a different mirror and/or wait a few minutes
and try again; usually this is because of transient updates.
If problems persist, feel free to report to texlive@tug.org.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,7 +26,7 @@ test_script:
   - tlmgr --version
   - pdflatex --version
   - xelatex --version
-  - Rscript -e "tinytex::tlmgr_install(readLines('tools/pkgs-yihui.txt'))"
+  - Rscript -e "tinytex::tlmgr(c('--verify-repo=none', 'install', readLines('tools/pkgs-yihui.txt')))"
   - 7z a TinyTeX.zip %APPDATA%\\TinyTeX
   - travis-tool.sh install_deps
   - R CMD INSTALL .
